<resources>
  <string name="app_name">Professor Layton Guide</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Professor Layton and the Curious Village</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_yank">US Version</string>
  <string name="action_mobile">Mobile Version</string>

  <string name="puzzle005a">005 - Digital Digits</string>
  <string name="puzzle010a">010 - Alphabet</string>
  <string name="puzzle045a">045 - Puzzle Aliens</string>
  <string name="puzzle046a">046 - Star in the Sky</string>
  <string name="puzzle050a">050 - OTTF?</string>
  <string name="puzzle062a">062 - The Mysterious Note</string>
  <string name="puzzle066a">066 - Birthday Girl</string>
  <string name="puzzle067a">067 - The Chocolate Code</string>
  <string name="puzzle072a">072 - The Sound of Silence</string>
  <string name="puzzle076a">076 - Flower Garden</string>
  <string name="puzzle085a">085 - Weekend Getaway</string>
  <string name="puzzle088a">088 - In A Hole</string>
  <string name="puzzle096a">096 - Take the Stairs</string>
  <string name="puzzle111a">111 - Mystery Item (US)</string>
  <string name="puzzle113a">113 - Pet Hotel</string>
  <string name="puzzle124a">124 - Missing Number</string>
  <string name="puzzle001">001 - Where\'s the Village?</string>
  <string name="puzzle001a">001 - Where\'s the Town?</string>
  <string name="puzzle002">002 - The Crank and Slot</string>
  <string name="puzzle003">003 - Strange Hats</string>
  <string name="puzzle004">004 - Where\'s My House</string>
  <string name="puzzle005">005 - Clock Hands</string>
  <string name="puzzle006">006 - Light Weight</string>
  <string name="puzzle007">007 - Wolves and Chicks</string>
  <string name="puzzle008">008 - Farm Work</string>
  <string name="puzzle009">009 - One Poor Pooch</string>
  <string name="puzzle010">010 - Four Digits</string>
  <string name="puzzle011">011 - Arc and Line</string>
  <string name="puzzle012">012 - Make a Rectangle</string>
  <string name="puzzle013">013 - Sinking Ship</string>
  <string name="puzzle014">014 - Which Chair?</string>
  <string name="puzzle015">015 - How Many Are Left?</string>
  <string name="puzzle016">016 - Triangles and Ink</string>
  <string name="puzzle017">017 - Five-Card Shuffle</string>
  <string name="puzzle018">018 - Of Dust and Dustpan</string>
  <string name="puzzle019">019 - Car Park Gridlock</string>
  <string name="puzzle019a">019 - Parking Lot Gridlock</string>
  <string name="puzzle020">020 - Unfriendly Commute</string>
  <string name="puzzle020a">020 - Unfriendly Neighbours</string>
  <string name="puzzle021">021 - Pill Prescription</string>
  <string name="puzzle022">022 - Pigpen Partitions</string>
  <string name="puzzle023">023 - Juice Pitchers</string>
  <string name="puzzle024">024 - Milk Pitchers</string>
  <string name="puzzle025">025 - Equilateral Triangle</string>
  <string name="puzzle026">026 - Bottle Full of Germs</string>
  <string name="puzzle027">027 - Bickering Brothers</string>
  <string name="puzzle028">028 - Find the Dot</string>
  <string name="puzzle029">029 - Five Suspects</string>
  <string name="puzzle030">030 - One-Line Puzzle 1</string>
  <string name="puzzle031">031 - Racetrack Riddle</string>
  <string name="puzzle032">032 - Sweet Jars</string>
  <string name="puzzle032a">032 - Candy Jars</string>
  <string name="puzzle033">033 - Light Which One?</string>
  <string name="puzzle034">034 - How Many Sheets?</string>
  <string name="puzzle035">035 - Strange Dots</string>
  <string name="puzzle036">036 - Strange Dots</string>
  <string name="puzzle037">037 - Brother and Sister</string>
  <string name="puzzle038">038 - Island Hopping</string>
  <string name="puzzle039">039 - One-Line Puzzle 2</string>
  <string name="puzzle040">040 - Father\'s Age</string>
  <string name="puzzle040a">040 - How Old Is Dad?</string>
  <string name="puzzle041">041 - Spare Change</string>
  <string name="puzzle042">042 - The Camera and Case</string>
  <string name="puzzle043">043 - Three Umbrellas</string>
  <string name="puzzle044">044 - Stamp Stumper</string>
  <string name="puzzle045">045 - Lunar Weight</string>
  <string name="puzzle046">046 - The Biggest Star</string>
  <string name="puzzle047">047 - On the Run</string>
  <string name="puzzle048">048 - The Biggest Star</string>
  <string name="puzzle049">049 - 1,000 Times</string>
  <string name="puzzle050">050 - Number Maze</string>
  <string name="puzzle051">051 - The Town Barbers</string>
  <string name="puzzle052">052 - Find a Star</string>
  <string name="puzzle053">053 - Fish Thief</string>
  <string name="puzzle054">054 - Monster!</string>
  <string name="puzzle055">055 - The Odd Sandwich</string>
  <string name="puzzle056">056 - The Lazy Guard</string>
  <string name="puzzle057">057 - Cut Which One?</string>
  <string name="puzzle058">058 - Get the Ball Out! 1</string>
  <string name="puzzle059">059 - The Longest Path</string>
  <string name="puzzle060">060 - Weighing Cats</string>
  <string name="puzzle061">061 - Pin Board Shapes</string>
  <string name="puzzle062">062 - A Tricky Inheritance</string>
  <string name="puzzle063">063 - Mother\'s Age</string>
  <string name="puzzle063a">063 - How Old Is Mom?</string>
  <string name="puzzle064">064 - Odd Equations</string>
  <string name="puzzle065">065 - Letters and Numbers</string>
  <string name="puzzle065a">065 - What\'s E?</string>
  <string name="puzzle066">066 - Five Borrowers</string>
  <string name="puzzle067">067 - How Many Sweets?</string>
  <string name="puzzle068">068 - Find the Pentagons</string>
  <string name="puzzle069">069 - Chocolate Puzzle</string>
  <string name="puzzle070">070 - The Shattered Vase</string>
  <string name="puzzle071">071 - Sausage Thief</string>
  <string name="puzzle072">072 - Truth and Lies</string>
  <string name="puzzle073">073 - How Many Squares?</string>
  <string name="puzzle074">074 - Broken Window</string>
  <string name="puzzle075">075 - The Wire Cube</string>
  <string name="puzzle076">076 - Flower Garden</string>
  <string name="puzzle077">077 - Which Job?</string>
  <string name="puzzle078">078 - Water Pitchers</string>
  <string name="puzzle079">079 - Apples to Oranges</string>
  <string name="puzzle080">080 - Too Many Queens 1</string>
  <string name="puzzle081">081 - Too Many Queens 2</string>
  <string name="puzzle082">082 - Too Many Queens 3</string>
  <string name="puzzle083">083 - Too Many Queens 4</string>
  <string name="puzzle084">084 - Which Boxes to Move?</string>
  <string name="puzzle085">085 - Train Speed</string>
  <string name="puzzle086">086 - Train Speed</string>
  <string name="puzzle087">087 - Ferris Wheel Riddle</string>
  <string name="puzzle088">088 - In A Hole</string>
  <string name="puzzle089">089 - In A Hole</string>
  <string name="puzzle090">090 - Get the Ball Out! 2</string>
  <string name="puzzle091">091 - Pattern Matching</string>
  <string name="puzzle092">092 - Wash Up</string>
  <string name="puzzle093">093 - Over the River</string>
  <string name="puzzle094">094 - Get the Ball Out! 4</string>
  <string name="puzzle095">095 - A Magic Square</string>
  <string name="puzzle096">096 - On the Stairs</string>
  <string name="puzzle097">097 - Maiden\'s Escape</string>
  <string name="puzzle097a">097 - Princess in a Box 1</string>
  <string name="puzzle098">098 - Card Order</string>
  <string name="puzzle099">099 - 33333!</string>
  <string name="puzzle100">100 - Seven Squares</string>
  <string name="puzzle101">101 - Splitting It Up</string>
  <string name="puzzle102">102 - Aces and the Joker</string>
  <string name="puzzle103">103 - Wood Cutouts</string>
  <string name="puzzle104">104 - A Sweet Treat</string>
  <string name="puzzle105">105 - Wash Up</string>
  <string name="puzzle106">106 - How Many Glasses</string>
  <string name="puzzle107">107 - Worm in the Apple</string>
  <string name="puzzle107a">107 - A Worm\'s Dream</string>
  <string name="puzzle108">108 - Not Knots</string>
  <string name="puzzle109">109 - Laziest Man on Earth</string>
  <string name="puzzle110">110 - The Vanishing Cube</string>
  <string name="puzzle111">111 - Making a Square</string>
  <string name="puzzle112">112 - My Beloved</string>
  <string name="puzzle113">113 - Pet Menagerie</string>
  <string name="puzzle114">114 - Tetrahedron Trial</string>
  <string name="puzzle115">115 - Odd Box Out</string>
  <string name="puzzle116">116 - The Largest Total</string>
  <string name="puzzle117">117 - Painting a Cube</string>
  <string name="puzzle118">118 - Red and Black Cards</string>
  <string name="puzzle119">119 - Red and Blue 1</string>
  <string name="puzzle120">120 - Get the Ball Out! 3</string>
  <string name="puzzle121">121 - Diamond in the Flag</string>
  <string name="puzzle122">122 - The Next Die</string>
  <string name="puzzle123">123 - Tons of Triangles</string>
  <string name="puzzle124">124 - The Rope Ladder</string>
  <string name="puzzle125">125 - Rolling the Die</string>
  <string name="puzzle126">126 - Red and Blue 2</string>
  <string name="puzzle127">127 - Perimeter Perplexer</string>
  <string name="puzzle128">128 - Number Lock</string>
  <string name="puzzle129">129 - Four Balls</string>
  <string name="puzzle130">130 - Too Many Queens 5</string>
  <string name="puzzle131">131 - Heavier or Lighter?</string>
  <string name="puzzle132">132 - Princess\'s Escape</string>
  <string name="puzzle132a">132 - Princess in a Box 2</string>
  <string name="puzzle133">133 - Finish the Equation</string>
  <string name="puzzle134">134 - Land Disputes</string>
  <string name="puzzle135">135 - Queen\'s Escape</string>
  <string name="puzzle135a">135 - Royal Escape</string>
</resources>
