<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/puzzle001"
      android:title="@string/puzzle001" />
    <item
      android:id="@+id/puzzle002"
      android:title="@string/puzzle002" />
    <item
      android:id="@+id/puzzle003"
      android:title="@string/puzzle003" />
    <item
      android:id="@+id/puzzle004"
      android:title="@string/puzzle004" />
    <item
      android:id="@+id/puzzle005"
      android:title="@string/puzzle005" />
    <item
      android:id="@+id/puzzle006"
      android:title="@string/puzzle006" />
    <item
      android:id="@+id/puzzle007"
      android:title="@string/puzzle007" />
    <item
      android:id="@+id/puzzle008"
      android:title="@string/puzzle008" />
    <item
      android:id="@+id/puzzle009"
      android:title="@string/puzzle009" />
    <item
      android:id="@+id/puzzle010"
      android:title="@string/puzzle010" />
    <item
      android:id="@+id/puzzle011"
      android:title="@string/puzzle011" />
    <item
      android:id="@+id/puzzle012"
      android:title="@string/puzzle012" />
    <item
      android:id="@+id/puzzle013"
      android:title="@string/puzzle013" />
    <item
      android:id="@+id/puzzle014"
      android:title="@string/puzzle014" />
    <item
      android:id="@+id/puzzle015"
      android:title="@string/puzzle015" />
    <item
      android:id="@+id/puzzle016"
      android:title="@string/puzzle016" />
    <item
      android:id="@+id/puzzle017"
      android:title="@string/puzzle017" />
    <item
      android:id="@+id/puzzle018"
      android:title="@string/puzzle018" />
    <item
      android:id="@+id/puzzle019"
      android:title="@string/puzzle019" />
    <item
      android:id="@+id/puzzle020"
      android:title="@string/puzzle020" />
    <item
      android:id="@+id/puzzle021"
      android:title="@string/puzzle021" />
    <item
      android:id="@+id/puzzle022"
      android:title="@string/puzzle022" />
    <item
      android:id="@+id/puzzle023"
      android:title="@string/puzzle023" />
    <item
      android:id="@+id/puzzle024"
      android:title="@string/puzzle024" />
    <item
      android:id="@+id/puzzle025"
      android:title="@string/puzzle025" />
    <item
      android:id="@+id/puzzle026"
      android:title="@string/puzzle026" />
    <item
      android:id="@+id/puzzle027"
      android:title="@string/puzzle027" />
    <item
      android:id="@+id/puzzle028"
      android:title="@string/puzzle028" />
    <item
      android:id="@+id/puzzle029"
      android:title="@string/puzzle029" />
    <item
      android:id="@+id/puzzle030"
      android:title="@string/puzzle030" />
    <item
      android:id="@+id/puzzle031"
      android:title="@string/puzzle031" />
    <item
      android:id="@+id/puzzle032"
      android:title="@string/puzzle032" />
    <item
      android:id="@+id/puzzle033"
      android:title="@string/puzzle033" />
    <item
      android:id="@+id/puzzle034"
      android:title="@string/puzzle034" />
    <item
      android:id="@+id/puzzle035"
      android:title="@string/puzzle035" />
    <item
      android:id="@+id/puzzle036"
      android:title="@string/puzzle036" />
    <item
      android:id="@+id/puzzle037"
      android:title="@string/puzzle037" />
    <item
      android:id="@+id/puzzle038"
      android:title="@string/puzzle038" />
    <item
      android:id="@+id/puzzle039"
      android:title="@string/puzzle039" />
    <item
      android:id="@+id/puzzle040"
      android:title="@string/puzzle040" />
    <item
      android:id="@+id/puzzle041"
      android:title="@string/puzzle041" />
    <item
      android:id="@+id/puzzle042"
      android:title="@string/puzzle042" />
    <item
      android:id="@+id/puzzle043"
      android:title="@string/puzzle043" />
    <item
      android:id="@+id/puzzle044"
      android:title="@string/puzzle044" />
    <item
      android:id="@+id/puzzle045"
      android:title="@string/puzzle045" />
    <item
      android:id="@+id/puzzle046"
      android:title="@string/puzzle046" />
    <item
      android:id="@+id/puzzle047"
      android:title="@string/puzzle047" />
    <item
      android:id="@+id/puzzle048"
      android:title="@string/puzzle048" />
    <item
      android:id="@+id/puzzle049"
      android:title="@string/puzzle049" />
    <item
      android:id="@+id/puzzle050"
      android:title="@string/puzzle050" />
    <item
      android:id="@+id/puzzle051"
      android:title="@string/puzzle051" />
    <item
      android:id="@+id/puzzle052"
      android:title="@string/puzzle052" />
    <item
      android:id="@+id/puzzle053"
      android:title="@string/puzzle053" />
    <item
      android:id="@+id/puzzle054"
      android:title="@string/puzzle054" />
    <item
      android:id="@+id/puzzle055"
      android:title="@string/puzzle055" />
    <item
      android:id="@+id/puzzle056"
      android:title="@string/puzzle056" />
    <item
      android:id="@+id/puzzle057"
      android:title="@string/puzzle057" />
    <item
      android:id="@+id/puzzle058"
      android:title="@string/puzzle058" />
    <item
      android:id="@+id/puzzle059"
      android:title="@string/puzzle059" />
    <item
      android:id="@+id/puzzle060"
      android:title="@string/puzzle060" />
    <item
      android:id="@+id/puzzle061"
      android:title="@string/puzzle061" />
    <item
      android:id="@+id/puzzle062"
      android:title="@string/puzzle062" />
    <item
      android:id="@+id/puzzle063"
      android:title="@string/puzzle063" />
    <item
      android:id="@+id/puzzle064"
      android:title="@string/puzzle064" />
    <item
      android:id="@+id/puzzle065"
      android:title="@string/puzzle065" />
    <item
      android:id="@+id/puzzle066"
      android:title="@string/puzzle066" />
    <item
      android:id="@+id/puzzle067"
      android:title="@string/puzzle067" />
    <item
      android:id="@+id/puzzle068"
      android:title="@string/puzzle068" />
    <item
      android:id="@+id/puzzle069"
      android:title="@string/puzzle069" />
    <item
      android:id="@+id/puzzle070"
      android:title="@string/puzzle070" />
    <item
      android:id="@+id/puzzle071"
      android:title="@string/puzzle071" />
    <item
      android:id="@+id/puzzle072"
      android:title="@string/puzzle072" />
    <item
      android:id="@+id/puzzle073"
      android:title="@string/puzzle073" />
    <item
      android:id="@+id/puzzle074"
      android:title="@string/puzzle074" />
    <item
      android:id="@+id/puzzle075"
      android:title="@string/puzzle075" />
    <item
      android:id="@+id/puzzle076"
      android:title="@string/puzzle076" />
    <item
      android:id="@+id/puzzle077"
      android:title="@string/puzzle077" />
    <item
      android:id="@+id/puzzle078"
      android:title="@string/puzzle078" />
    <item
      android:id="@+id/puzzle079"
      android:title="@string/puzzle079" />
    <item
      android:id="@+id/puzzle080"
      android:title="@string/puzzle080" />
    <item
      android:id="@+id/puzzle081"
      android:title="@string/puzzle081" />
    <item
      android:id="@+id/puzzle082"
      android:title="@string/puzzle082" />
    <item
      android:id="@+id/puzzle083"
      android:title="@string/puzzle083" />
    <item
      android:id="@+id/puzzle084"
      android:title="@string/puzzle084" />
    <item
      android:id="@+id/puzzle085"
      android:title="@string/puzzle085" />
    <item
      android:id="@+id/puzzle086"
      android:title="@string/puzzle086" />
    <item
      android:id="@+id/puzzle087"
      android:title="@string/puzzle087" />
    <item
      android:id="@+id/puzzle088"
      android:title="@string/puzzle088" />
    <item
      android:id="@+id/puzzle089"
      android:title="@string/puzzle089" />
    <item
      android:id="@+id/puzzle090"
      android:title="@string/puzzle090" />
    <item
      android:id="@+id/puzzle091"
      android:title="@string/puzzle091" />
    <item
      android:id="@+id/puzzle092"
      android:title="@string/puzzle092" />
    <item
      android:id="@+id/puzzle093"
      android:title="@string/puzzle093" />
    <item
      android:id="@+id/puzzle094"
      android:title="@string/puzzle094" />
    <item
      android:id="@+id/puzzle095"
      android:title="@string/puzzle095" />
    <item
      android:id="@+id/puzzle096"
      android:title="@string/puzzle096" />
    <item
      android:id="@+id/puzzle097"
      android:title="@string/puzzle097" />
    <item
      android:id="@+id/puzzle098"
      android:title="@string/puzzle098" />
    <item
      android:id="@+id/puzzle099"
      android:title="@string/puzzle099" />
    <item
      android:id="@+id/puzzle100"
      android:title="@string/puzzle100" />
    <item
      android:id="@+id/puzzle101"
      android:title="@string/puzzle101" />
    <item
      android:id="@+id/puzzle102"
      android:title="@string/puzzle102" />
    <item
      android:id="@+id/puzzle103"
      android:title="@string/puzzle103" />
    <item
      android:id="@+id/puzzle104"
      android:title="@string/puzzle104" />
    <item
      android:id="@+id/puzzle105"
      android:title="@string/puzzle105" />
    <item
      android:id="@+id/puzzle106"
      android:title="@string/puzzle106" />
    <item
      android:id="@+id/puzzle107"
      android:title="@string/puzzle107" />
    <item
      android:id="@+id/puzzle108"
      android:title="@string/puzzle108" />
    <item
      android:id="@+id/puzzle109"
      android:title="@string/puzzle109" />
    <item
      android:id="@+id/puzzle110"
      android:title="@string/puzzle110" />
    <item
      android:id="@+id/puzzle111"
      android:title="@string/puzzle111" />
    <item
      android:id="@+id/puzzle112"
      android:title="@string/puzzle112" />
    <item
      android:id="@+id/puzzle113"
      android:title="@string/puzzle113" />
    <item
      android:id="@+id/puzzle114"
      android:title="@string/puzzle114" />
    <item
      android:id="@+id/puzzle115"
      android:title="@string/puzzle115" />
    <item
      android:id="@+id/puzzle116"
      android:title="@string/puzzle116" />
    <item
      android:id="@+id/puzzle117"
      android:title="@string/puzzle117" />
    <item
      android:id="@+id/puzzle118"
      android:title="@string/puzzle118" />
    <item
      android:id="@+id/puzzle119"
      android:title="@string/puzzle119" />
    <item
      android:id="@+id/puzzle120"
      android:title="@string/puzzle120" />
    <item
      android:id="@+id/puzzle121"
      android:title="@string/puzzle121" />
    <item
      android:id="@+id/puzzle122"
      android:title="@string/puzzle122" />
    <item
      android:id="@+id/puzzle123"
      android:title="@string/puzzle123" />
    <item
      android:id="@+id/puzzle124"
      android:title="@string/puzzle124" />
    <item
      android:id="@+id/puzzle125"
      android:title="@string/puzzle125" />
    <item
      android:id="@+id/puzzle126"
      android:title="@string/puzzle126" />
    <item
      android:id="@+id/puzzle127"
      android:title="@string/puzzle127" />
    <item
      android:id="@+id/puzzle128"
      android:title="@string/puzzle128" />
    <item
      android:id="@+id/puzzle129"
      android:title="@string/puzzle129" />
    <item
      android:id="@+id/puzzle130"
      android:title="@string/puzzle130" />
    <item
      android:id="@+id/puzzle131"
      android:title="@string/puzzle131" />
    <item
      android:id="@+id/puzzle132"
      android:title="@string/puzzle132" />
    <item
      android:id="@+id/puzzle133"
      android:title="@string/puzzle133" />
    <item
      android:id="@+id/puzzle134"
      android:title="@string/puzzle134" />
    <item
      android:id="@+id/puzzle135"
      android:title="@string/puzzle135" />
  </group>

</menu>
